# django-bridge

./: README.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: playwright.yml  test.yml
docs/: index.md
docs/getting-started/: how-it-works.md  introduction.md  start.md
docs/guide/: contributing.md  forms.md  global_context.md  messages.md  navigation.md  overlays.md  python2react.md  storybook.md  testing.md  view_components.md  views.md
docs/stylesheets/: extra.css
python/: pyproject.toml  setup.py  tox.ini
python/django_bridge/: __init__.py  conf.py  middleware.py  response.py
python/django_bridge/adapters/: registry.py
testproject/: .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts
testproject/client/: Dockerfile  package-lock.json  package.json  vite.config.ts
testproject/client/react/: Dockerfile  package-lock.json
testproject/client/react/src/: main.tsx
testproject/client/react/src/views/: Navigation.tsx
testproject/client/src/views/: Home.tsx
testproject/client/vue/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
testproject/client/vue/src/: contexts.ts  index.css  main.ts
testproject/client/vue/src/adapters/: Field.ts  Form.ts  ServerRenderedField.ts
testproject/client/vue/src/adapters/widgets/: Select.ts  TextInput.ts  base.ts
testproject/client/vue/src/views/: Home.vue  Navigation.vue
testproject/server/: Dockerfile  pyproject.toml
testproject/server/testproject/: settings.py  urls.py  views.py
testproject/tests/: README.md  home.spec.ts  integration.spec.ts  navigation.spec.ts
website/docs/: forms.md  introduction.md  start.md  view_components.md
website/src/pages/: index.tsx
